--- a/views/monitor.html
+++ b/views/monitor.html
@@ -98,61 +98,9 @@
 								<div class="page-body">
 										<div class="container-xl">
 												<div class="row row-cards">
-														<div class="row g-3 align-items-center">
-																<div class="col-auto">
-
-																		{{ if eq .Monitor.Status "up" }}
-																		<span class="status-indicator status-green status-indicator-animated">
-																				<span class="status-indicator-circle"></span>
-																				<span class="status-indicator-circle"></span>
-																				<span class="status-indicator-circle"></span>
-																		</span>
-																		{{ else if eq .Monitor.Status "grace_period" }}
-																		<span class="status-indicator status-yellow status-indicator-animated">
-																				<span class="status-indicator-circle"></span>
-																				<span class="status-indicator-circle"></span>
-																				<span class="status-indicator-circle"></span>
-																		</span>
-																		{{ else }}
-																		<span class="status-indicator status-red">
-																				<span class="status-indicator-circle"></span>
-																				<span class="status-indicator-circle"></span>
-																				<span class="status-indicator-circle"></span>
-																		</span>
-																		{{ end }}
-
-																</div>
-																<div class="col">
-																		<h2 class="page-title">
-																				{{ .Monitor.Name }}
-																		</h2>
-																		<div class="text-secondary">
-																				<ul class="list-inline list-inline-dots mb-0">
-																						<li class="list-inline-item"><span class="text-green">{{ .Monitor.Status }}</span></li>
-																						<li class="list-inline-item">Checked every {{ .Monitor.Period }} minute{{ if gt .Monitor.Period 1 }}s{{ end }}
-																						</li>
-																				</ul>
-																		</div>
-																</div>
-																<div class="col-md-auto ms-auto d-print-none">
-																		<div class="btn-list">
-																				<a href="#" class="btn" data-bs-toggle="modal" data-bs-target="#modal-report">
-																						Configure
-																				</a>
-																				<a href="#" class="btn btn-primary">
-																						<!-- Download SVG icon from http://tabler-icons.io/i/player-pause -->
-																						<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 5m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v12a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z" /><path d="M14 5m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v12a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z" /></svg>
-																						Pause this monitor
-																				</a>
-																				<a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modal-danger">
-																						<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-trash-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 7h16" /><path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" /><path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" /><path d="M10 12l4 4m0 -4l-4 4" /></svg>
-																						Delete this monitor
-																				</a>
-
-																		</div>
-																</div>
+														<div id="monitor-opts">
+																{{ template "monitor-options" . }}
 														</div>
-
 														<div class="col-md-4">
 																<div class="card">
 																		<div class="card-body">
@@ -369,3 +317,66 @@
 				<script src="/static/js/demo.min.js?1692870487" defer></script>
 		</body>
 </html>
+
+{{ define "monitor-options" }}
+<div class="row g-3 align-items-center">
+		<div class="col-auto">
+
+				{{ if eq .Monitor.Status "up" }}
+				<span class="status-indicator status-green status-indicator-animated">
+						<span class="status-indicator-circle"></span>
+						<span class="status-indicator-circle"></span>
+						<span class="status-indicator-circle"></span>
+				</span>
+				{{ else if eq .Monitor.Status "grace_period" }}
+				<span class="status-indicator status-yellow status-indicator-animated">
+						<span class="status-indicator-circle"></span>
+						<span class="status-indicator-circle"></span>
+						<span class="status-indicator-circle"></span>
+				</span>
+				{{ else }}
+				<span class="status-indicator status-red">
+						<span class="status-indicator-circle"></span>
+						<span class="status-indicator-circle"></span>
+						<span class="status-indicator-circle"></span>
+				</span>
+				{{ end }}
+
+		</div>
+		<div class="col">
+				<h2 class="page-title">
+						{{ .Monitor.Name }}
+				</h2>
+				<div class="text-secondary">
+						<ul class="list-inline list-inline-dots mb-0">
+								<li class="list-inline-item"><span class="text-green">{{ .Monitor.Status }}</span></li>
+								<li class="list-inline-item">Checked every {{ .Monitor.Period }} minute{{ if gt .Monitor.Period 1 }}s{{ end }}
+								</li>
+						</ul>
+				</div>
+		</div>
+		<div class="col-md-auto ms-auto d-print-none">
+				<div class="btn-list">
+						<a href="#" class="btn" data-bs-toggle="modal" data-bs-target="#modal-report">
+								Configure
+						</a>
+						{{ if eq .Monitor.Status "paused" }}
+						<a hx-get="/api/monitor/resume/{{.Monitor.ID}}" hx-target="#monitor-opts" hx-swap="innerHTML" class="btn btn-primary">
+								<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="currentColor"  class="icon icon-tabler icons-tabler-filled icon-tabler-player-play"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z" /></svg>
+								Resume this monitor
+						</a>
+						{{ else }}
+						<a hx-get="/api/monitor/pause/{{.Monitor.ID}}" hx-target="#monitor-opts" hx-swap="innerHTML" class="btn btn-primary">
+								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 5m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v12a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z" /><path d="M14 5m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v12a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z" /></svg>
+								Pause this monitor
+						</a>
+						{{ end }}
+						<a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modal-danger">
+								<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-trash-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 7h16" /><path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" /><path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" /><path d="M10 12l4 4m0 -4l-4 4" /></svg>
+								Delete this monitor
+						</a>
+
+				</div>
+		</div>
+</div>
+{{ end }}
